syntax = "proto3";
package raw_anime;

service RawAnimeService {
  rpc FetchRawAnimes (Void) returns (stream RawAnime) {};
  rpc FetchRawAnimesSynopsis (Void) returns (stream RawAnimeSynopsis) {};
  rpc FetchRawAnimeRatings (Void) returns (stream RawAnimeRating) {};
}

message Void {}

message RawAnime {
  uint32 mal_id = 1;
  string name = 2;
  optional float score = 3;
  optional string genres = 4;
  optional string japanese_name = 5;
  optional string type = 6;
  optional uint32 episodes = 7;
  optional string aired = 8;
  optional string studios = 9;
  optional string source = 10;
  optional string rating = 11;
  optional uint32 popularity = 12;
  optional uint32 watching = 13;
}

message RawAnimeSynopsis {
  uint32 mal_id = 1;
  string synopsis = 2;
}

message RawAnimeRating {
  uint32 anime_id = 1;
  uint32 user_id = 2;
  uint32 rating = 3;
  optional WatchingStatus watching_status = 4;
  optional uint32 watched_episodes = 5;
}

enum WatchingStatus {
  UNKNOWN = 0;
  CURRENTLY_WATCHING = 1;
  COMPLETED = 2;
  ON_HOLD = 3;
  DROPPED = 4;
  PLAN_TO_WATCH = 6;
}